--- a/TileMusicGame/app/CMakeLists.txt
+++ b/TileMusicGame/app/CMakeLists.txt
@@ -10,12 +10,15 @@ cmake_minimum_required(VERSION 3.4.1)
 # You can define multiple libraries, and CMake builds them for you.
 # Gradle automatically packages shared libraries with your APK.
 
+file(GLOB SOURCES
+        src/main/cpp/*.cpp)
+
 add_library( # Sets the name of the library.
         native-lib
         # Sets the library as a shared library.
         SHARED
         # Provides a relative path to your source file(s).
-        src/main/cpp/native-lib.cpp)
+        ${SOURCES})
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
